force-app/main/default/objects/FEC_Stage_Change_Condition__c/FEC_Stage_Change_Condition__c.object-meta.xml
<CustomObject>
    <description>Stores dynamic conditions for Stage Change (Transition Rule) in the Workflow Metadata Engine.</description>
    <label>Stage Change Condition</label>
    <nameField>
        <displayFormat>SCC-{0000}</displayFormat>
        <label>Stage Change Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Change Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>