force-app/main/default/objects/FEC_Stage_Change_Condition__c/fields/FEC_Additional_Field__c.field-meta.xml
<CustomField>
    <fullName>FEC_Additional_Field__c</fullName>
    <description>Lookup to FEC_Additional_Field__c. Defines which field this condition evaluates. Field API Name is stored in FEC_Unique_ID__c.</description>
    <label>Additional Field</label>
    <referenceTo>FEC_Additional_Field__c</referenceTo>
    <relationshipLabel>Stage Change Conditions</relationshipLabel>
    <relationshipName>Stage_Change_Conditions_Live</relationshipName>
    <type>Lookup</type>
</CustomField>