force-app/main/default/objects/FEC_Stage_Change_Condition__c/fields/FEC_Master_Data_Setting__c.field-meta.xml
<CustomField>
    <fullName>FEC_Master_Data_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Data Setting</label>
    <referenceTo>FEC_Master_Data_Setting__c</referenceTo>
    <relationshipLabel>Stage Change Conditions</relationshipLabel>
    <relationshipName>FEC_Stage_Change_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>