force-app/main/default/objects/FEC_Stage_Change_Condition__c/fields/FEC_Operator__c.field-meta.xml
<CustomField>
    <fullName>FEC_Operator__c</fullName>
    <description>Comparison operator used to evaluate the condition (e.g. =, !=, &gt;, &gt;=, &lt;, &lt;=, IN, NOT IN, CONTAINS, STARTS WITH, ENDS WITH).</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>= (Bằng)</label>
            </value>
            <value>
                <fullName>!=</fullName>
                <label>!= (Khác)</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>&gt; (Lớn hơn)</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>&gt;= (Lớn hơn hoặc bằng)</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>&lt; (Nhỏ hơn)</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>&lt;= (Nhỏ hơn hoặc bằng)</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>IN (Nằm trong)</label>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>STARTS WITH</fullName>
            </value>
            <value>
                <fullName>ENDS WITH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>