force-app/main/default/objects/FEC_Stage_Change_Condition__c/fields/FEC_Order__c.field-meta.xml
<CustomField>
    <fullName>FEC_Order__c</fullName>
    <description>Order/index of this condition, used to reference in Condition Logic string (e.g. &quot;1 AND (2 OR 3)&quot;).</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>