force-app/main/default/objects/FEC_Stage_Change_Condition__c/fields/FEC_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Value__c</fullName>
    <description>The value to compare against the field. For IN/NOT IN operators, separate multiple values with commas (e.g. VIP,PREMIUM,GOLD).</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>