force-app/main/default/objects/FEC_Stage_Change_Condition__c/fields/FEC_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Value_Type__c</fullName>
    <description>Data type of the Value field, used for correct comparison (String, Number, Boolean, List).</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>List</fullName>
                <label>List (comma-separated)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>